receipts/live-applies/evidence/2026-03-30-ws-0298-runtime-latest-cve-receipts-r1.txt
docker-runtime-lv3 | FAILED | rc=1 >>
  File "<string>", line 5
    print(\n.join(sorted((p.name for p in latest.values()), reverse=True)[:12]))
           ^
SyntaxError: unexpected character after line continuation characternon-zero return code
